Avoid wrapping in the reports count column

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -2843,6 +2843,12 @@ input.richtext_title[type="text"] {
   width:475px;
 }
 
+.issues-list {
+  td:nth-child(2) {
+    white-space: nowrap;
+  }
+}
+
 .report-disclaimer {
   background: #fff1f0;
   color: #d85030;
